Bug 575835 - [BETA_JAVA17] 20 test failures in jdt.core with java 16 test run
Change-Id: Id98127ea500b2efa2457b8eb2891a1a23a26c605
Signed-off-by: Sravan Kumar Lakkimsetti <sravankumarl@in.ibm.com>
Reviewed-on: https://git.eclipse.org/r/c/jdt/eclipse.jdt.core/+/185048
Tested-by: JDT Bot <jdt-bot@eclipse.org>
Reviewed-by: Manoj Palat <manpalat@in.ibm.com>